# HD4_Fetch_AI_UAgent

./: .env.example  .gitignore  BACKEND_DOCS.md  CONTRIBUTING.md  DEPLOYMENT.md  FRIEND_SYSTEM_API.md  FRIEND_SYSTEM_SUMMARY.md  GETTING_STARTED.md  HD4_SCHEDULER_API.md  LICENSE  QUICK_REFERENCE.md  README.md  agent.py  agent_advanced.py  agent_communication.py  backend.py  config.py  create_user.py  devenv.nix  example_simplified_usage.py  example_usage.py  extract_course_professors.py  fix_jwt.sh  init_db.py  install_deps.sh  private_keys.json  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt  schema.sql  setup.py  start_full_stack.bat  start_full_stack.sh  start_recommender_agent.sh  start_server.py  start_with_agent.sh  test.py  test_backend.py  test_cors.sh  (+2 more)
Frontend/: API_requirements.txt  INTEGRATION.md  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css  theme.js
Frontend/src/assets/: PROJECT_OVERVIEW.md
Frontend/src/components/: InteractivePanel.jsx  ProfessorDetails.jsx  ProfessorSelector.jsx
Frontend/src/pages/: HomePage.jsx  LoginPage.jsx
Frontend/src/services/: api.js
agent_recommender/: agent.py  agent_lite.py  config.py  debug_scoring.py  llm.py  main.py  prompts.py  run_local.py  schemas.py  scoring.py  server.py
agent_recommender/scripts/: bootstrap.sh  env.local.example.sh  env.local.sh  run_agent.sh  run_all.sh  run_gateway.sh
examples/: README.md
